# idlecodes

./: .gitignore  manage.py  pyproject.toml
core/: admin.py  models.py
core/management/commands/: get_hero_info.py  redeem.py
core/migrations/: 0001_initial.py  0002_auto_20210925_2143.py  0003_platform_instance_id.py  0004_redemption_message.py
idlecodes/: asgi.py  settings.py  urls.py  wsgi.py
