[tool.poetry]
name = "idlecodes"
version = "0.1.0"
description = "Redeem codes from https://incendar.com/idlechampions_codes.php"
authors = ["Dan Stace <dstace@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
django-extensions = "^3.1.5"
requests = "^2.26.0"
environs = "^9.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
